feat: simple ipfs deployment

--- a/ansible/admin/nginx/static/index.html.j2
+++ b/ansible/admin/nginx/static/index.html.j2
@@ -5,10 +5,10 @@
 </head>
 
 <body>
-    <h1>Thank's for stopping by</h1>
+    <h1>Thank's for stopping by {{ domain }}!</h1>
     <p>This server hosts my personal networked services:</p>
     <ul>
-        <li>Nothin at the moment!</li>
+        <li><a href="https://{{ domain }}/ipfs">IPFS</a></li>
     </ul>
 </body>
 
