--- a/ansible/admin/nginx/config.j2
+++ b/ansible/admin/nginx/config.j2
@@ -3,12 +3,19 @@ server {
     listen 443 ssl http2;
     server_name {{ domain }};
 
-    ssl_certificate /etc/nginx/ssl/{{ domain }}.crt;
-    ssl_certificate_key /etc/nginx/ssl/{{ domain }}.key;
+    ssl_certificate /etc/letsencrypt/live/{{ domain }}/fullchain.pem; # managed by Certbot
+    ssl_certificate_key /etc/letsencrypt/live/{{ domain }}/privkey.pem; # managed by Certbot
 
     location / {
-        root /var/www/html/{{ domain }}/static;
+        root /var/www/html/{{ domain }};
         index index.html;
+    }
+
+    location /ipfs {
+        proxy_pass http://localhost:8080;
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+        allow all;
     }
 
     # Redirect HTTP to HTTPS
