--- a/ansible/admin/nginx/ipfs.config.j2
+++ b/ansible/admin/nginx/ipfs.config.j2
@@ -1,16 +1,18 @@
 server {
     listen 80;
     listen 443 ssl http2;
-    server_name {{ domain }};
+    server_name ipfs.{{ domain }};
 
     ssl_certificate /etc/letsencrypt/live/{{ domain }}/fullchain.pem; # managed by Certbot
     ssl_certificate_key /etc/letsencrypt/live/{{ domain }}/privkey.pem; # managed by Certbot
 
     location / {
-        root /var/www/html/{{ domain }};
-        index index.html;
+        proxy_pass http://localhost:8080;
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+        allow all;
     }
-    
+
     # Redirect HTTP to HTTPS
     if ($scheme = http) {
         return 301 https://$server_name$request_uri;
