feat: basic auth ipfs api

--- a/ansible/admin/nginx/static/index.html.j2
+++ b/ansible/admin/nginx/static/index.html.j2
@@ -8,7 +8,9 @@
     <h1>Thank's for stopping by {{ domain }}!</h1>
     <p>This server hosts my personal networked services:</p>
     <ul>
-        <li><a href="https://{{ domain }}/ipfs">IPFS</a></li>
+        <li>This page ({{ domain }}). I'm going to make this eventually point to my personal blog.</li>
+        <li><a href="https://ipfs.{{ domain }}/ipfs">Public IPFS gateway</a> (pinned content only) </li>
+        <li><a href="https://ipfs.{{ domain }}/api">IPFS RPC API</a> (basic auth required) </li>
     </ul>
 </body>
 
