--- a/ansible/admin/nginx/ipfs.config.j2
+++ b/ansible/admin/nginx/ipfs.config.j2
@@ -1,3 +1,5 @@
+limit_req_zone $binary_remote_addr zone=ipfs_api:10m rate=10r/s;
+
 server {
     listen 80;
     listen 443 ssl http2;
@@ -6,11 +8,24 @@ server {
     ssl_certificate /etc/letsencrypt/live/{{ domain }}/fullchain.pem; # managed by Certbot
     ssl_certificate_key /etc/letsencrypt/live/{{ domain }}/privkey.pem; # managed by Certbot
 
+    # Direct all root requests to the gateway
     location / {
         proxy_pass http://localhost:8080;
         proxy_set_header Host $host;
         proxy_cache_bypass $http_upgrade;
-        allow all;
+    }
+
+    # Direct all API requests to the API
+    location /api {
+        limit_req zone=ipfs_api burst=20 nodelay;
+
+        auth_basic "Restricted";
+        auth_basic_user_file /etc/nginx/.htpasswd_ipfs;
+
+        # Note: the prefix is important here
+        proxy_pass http://localhost:5001/api;
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
     }
 
     # Redirect HTTP to HTTPS
