--- a/ansible/admin/nginx/ipfs.config.j2
+++ b/ansible/admin/nginx/ipfs.config.j2
@@ -5,8 +5,8 @@ server {
     listen 443 ssl http2;
     server_name ipfs.{{ domain }};
 
-    ssl_certificate /etc/letsencrypt/live/{{ domain }}/fullchain.pem; # managed by Certbot
-    ssl_certificate_key /etc/letsencrypt/live/{{ domain }}/privkey.pem; # managed by Certbot
+    ssl_certificate /etc/letsencrypt/live/ipfs.{{ domain }}/fullchain.pem; # managed by Certbot
+    ssl_certificate_key /etc/letsencrypt/live/ipfs.{{ domain }}/privkey.pem; # managed by Certbot
 
     # Direct all root requests to the gateway
     location / {
