--- a/ansible/admin/nginx/corpo.config.j2
+++ b/ansible/admin/nginx/corpo.config.j2
@@ -1,3 +1,4 @@
+# Server block listening on ports 80 and 443
 server {
     listen 80;
     listen 443 ssl http2;
@@ -7,11 +8,11 @@ server {
     ssl_certificate_key /etc/letsencrypt/live/{{ domain }}/privkey.pem; # managed by Certbot
 
     location / {
-        root /var/www/html/{{ domain }}/site;
-        index index.html;
-        try_files $uri $uri/ /index.html;
+        proxy_pass http://localhost:3000;
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
     }
-    
+
     # Redirect HTTP to HTTPS
     if ($scheme = http) {
         return 301 https://$server_name$request_uri;
